recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:5: error: value ==- is not a member of Int
  if (steps==-1) {
           ^