recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  
  
  if (steps==-1) {
    return;
  } 
  
  else { avance(length);
        gauche(90);
    spiral(steps-1, angle,length+increment,increment);
         
       
       
       }

  
  
  
  
  
}